--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -9,6 +9,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    <style>
+      body {
+        margin:0px;
+      }
+      #songList {
+        border: solid 1px #000;
+        display: inline-block;
+        list-style: none;
+        padding: 8px;
+      }
+    </style>
   </head>
   <body>
     <div id="content">
@@ -21,7 +32,7 @@
           return <li>{song.title}</li>
         });
         return (
-          <ul>{songItems}</ul>
+          <ul id="songList">{songItems}</ul>
         );
       }
     });
