--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -9,8 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
       body {
+        font-family: 'Roboto', sans-serif;
         margin:0px;
       }
       #songList {
@@ -18,6 +20,14 @@
         display: inline-block;
         list-style: none;
         padding: 8px;
+        margin: 0px;
+        width:200px;
+        position:absolute;
+        bottom:0px;
+        top:0px;
+      }
+      #songList > li:hover {
+        background-color: #ffcc00;
       }
     </style>
   </head>
