--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -9,62 +9,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Roboto', sans-serif;
-        margin:0px;
-      }
-      #songList {
-        display: inline-block;
-        list-style: none;
-        padding: 8px;
-        margin: 0px;
-        width: 200px;
-        position: absolute;
-        bottom: 8px;
-        top: 8px;
-        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 0px 2px 0 rgba(0, 0, 0, 0.19);
-        left: 8px;
-      }
-      #songList > li:hover {
-        background-color: #ffcc00;
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+    <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/flip.css")"/>
+
   </head>
   <body>
     <div id="content">
     </div>
     <script type="text/babel">
-    class Song extends React.Component {
-      constructor() {
-        super();
-        this.state = {
-          selected: false
-        }
-        this.handleClick = this.handleClick.bind(this);
-      }
 
-      handleClick() {
-        this.setState({selected: true});
-      }
 
-      render () {
-        return <li className={this.state.selected ? "selected":""}>{this.props.song.title}</li>
-      }
-    }
-    var SongList = React.createClass({
-      render: function() {
-        var songs = @Html(json)[0];
-        return (
-          <ul id="songList">
-            {songs.map(function(song){
-              return <Song key={song.id} song={song} />
-            })}
-          </ul>
-        );
-      }
-    });
     ReactDOM.render(
       <SongList />,
       document.getElementById('content')
