--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -1,28 +1,25 @@
 @(json:String)
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My Musical Flip Card</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.2.1/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.6.2/remarkable.min.js"></script>
+    <title>Flip</title>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/songlist/song.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.versioned("javascripts/songlist/songlist.js")"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/flip.css")"/>
-
   </head>
   <body>
-    <div id="content">
-    </div>
-    <script type="text/babel">
-
-
-    ReactDOM.render(
-      <SongList />,
-      document.getElementById('content')
-    ); 
+    <div id="content" />
+    <script type="text/javascript">
+        function init() {
+            var content = document.getElementById("content");
+            var songList = new SongList(@Html(json)[0]);
+            content.appendChild(songList.render());
+        }
+        window.addEventListener("load", function() {
+            init();
+        });
     </script>
   </body>
 </html>
