* Smoothed out scrolling animation w/ CSS transitions * Added support for song duration so we can use it for the transition's duration * Cleaned up the Bertha song model so it moves at the same pace as the original recording

--- a/public/stylesheets/flip.css
+++ b/public/stylesheets/flip.css
@@ -44,9 +44,11 @@ body {
 .phrase {
     display: inline-block;
     font-size:32pt;
+    height:50px;
 }
 #songDetail {
     white-space: nowrap;
     position:absolute;
     left:0px;
+    transition-property: left;
 }
