Got basic metronome working

--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div id="content" />
+    <audio src="@routes.Assets.versioned("audio/metronome100bps.mp3")" id="metronome" loop="loop"></audio>
     <script type="text/javascript">
         function init() {
             var content = document.getElementById("content");
