Changing color on buttons and apply some material design.

--- a/app/views/songs.scala.html
+++ b/app/views/songs.scala.html
@@ -19,6 +19,7 @@
             var content = document.getElementById("content");
             var songDetailContainer = document.createElement("div");
             songDetailContainer.setAttribute("id", "songDetailContainer");
+            songDetailContainer.classList.add("material");
             var songList = new SongList(@Html(json)[0]);
             content.appendChild(songList.render());
             content.appendChild(songDetailContainer);
