--- a/server/app/views/app.scala.html
+++ b/server/app/views/app.scala.html
@@ -1,14 +1,19 @@
 @(json:String)
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8" />
-    <title>Flip</title>
-    <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/flip.css")"/>
-</head>
-<body>
-    <div id="content"></div>
-    <audio src="@routes.Assets.versioned("audio/metronome100bps.mp3")" id="metronome" loop="loop"></audio>
-    <script src="@routes.Assets.versioned("client-fastopt.js")"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <title>Flip</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
+        <link rel="stylesheet" href="@routes.Assets.versioned("stylesheets/flip.css")"/>
+    </head>
+    <body>
+        <div id="content"></div>
+        <audio src="@routes.Assets.versioned("audio/metronome100bps.mp3")" id="metronome" loop="loop"></audio>
+        <script src="@routes.Assets.versioned("client-fastopt.js")"></script>
+        <script type="text/javascript">
+            let songs = @Html(json)[0];
+            system.ApplicationInitializer().main(songs)
+        </script>
+    </body>
 </html>
