--- a/server/public/stylesheets/flip.css
+++ b/server/public/stylesheets/flip.css
@@ -93,3 +93,34 @@ body {
     padding-top:4px;
     float:right;
 }
+#lyricsInputWrapper {
+    position:absolute;
+    top:45px;
+    left:4px;
+    right:4px;
+}
+#lyricsInput {
+    font-size:32pt;
+    width:100%;
+}
+#songEditor {
+    position:absolute;
+    left:8px;
+    right:8px;
+}
+#noteTimelineContainer {
+
+}
+#noteTimeline {
+    position:absolute;
+    bottom:50%;
+    left:0px;
+    right:0px;
+    border-bottom:1px solid #21A45C;
+}
+#noteTimelineAddIcon {
+    height:16px;
+    width:16px;
+    position: fixed;
+    top:8px;
+}
