--- a/server/public/stylesheets/flip.css
+++ b/server/public/stylesheets/flip.css
@@ -93,11 +93,11 @@ body {
     padding-top:4px;
     float:right;
 }
-#lyricsInputWrapper {
+#lyricsWrapper {
     position:absolute;
-    top:50px;
-    left:4px;
-    right:4px;
+    top:60px;
+    left:0px;
+    right:6px;
 }
 #lyricsInput {
     font-size:32pt;
@@ -107,6 +107,18 @@ body {
     position:absolute;
     left:8px;
     right:8px;
+    padding:12px;
+    background-color: #CCC;
+}
+#lyricsWrapper > #lyricsText {
+    color:#21A45C;
+    margin-top:-2px;
+    font-size:32pt;
+    padding-left:2px;
+    overflow:hidden;
+    margin-right:-4px;
+    white-space: nowrap;
+    padding-top:6px;
 }
 #noteTimelineContainer {
     height:95px;
@@ -120,15 +132,15 @@ body {
     border-bottom:2px solid #21A45C;
 }
 #noteAddIndicator {
-    height:48px;
-    width:48px;
+    height:68px;
+    width:68px;
     position: fixed;
     top:16px;
     border-left:solid 2px #21A45C;
     pointer-events: none;
 }
 #noteInput {
-    top:16px;
+    top:30px;
     position: fixed;
     min-width:40px;
     width:40px;
@@ -139,6 +151,6 @@ body {
     font-size:23pt;
     color: #21A45C;
     position: fixed;
-    top:21px;
+    top:41px;
     padding-left:3px;
 }
